--- a/profile.html
+++ b/profile.html
@@ -637,13 +637,13 @@ RWANDA<br>
 <h1>KENYA</h1>
 
 
-<p>Improve Your Quality Of Life
+<p>Improve Your Way of Living and Facilitate good quality of life 
 
 
-There are many benefits of regular exercise and physical activity such as risk reduction of having a heart attack, <br>
+Being fit is an art that should be embraced because one is able to evade many disease in life , <br>
 
 
-diabetes, high cholesterol, blood pressure, or reduction of bone density.<br>
+The body needs frequent exercise for blood circulation hence this facilitate health living.<br>
 
 
 Beyond these health related factors, a sound fitness program may help improve other intangibles like your overall self-confidence,<br>
@@ -661,7 +661,7 @@ mental focus, energy levels, and overall quality of life (i.e.keeping up with th
 <div id="footer">
 
 
-Copyright © MISFIT.COM
+Copyright © ALFRED.COM
 
 
 </div>
@@ -682,25 +682,24 @@ Copyright © MISFIT.COM
 <h2></h2>ABOUT ME</h2>
 
 
-My passion for fitness began with my own life experience back in 2010 as i completed highschool.<br>
+I used to play basketball but with the urge of my friends I decided to persure BodyBuilding.<br>
 
 
-Like many young people, I thought I could eat anything I wanted and not be affected until my bad habit of consuming a lot of foods caught up with me as my clothes began to fit more snug than I was comfortable with. Besides having an expanding waistline, I was frequently tired and maintained a low energy level and required the assistance of 5 Hour Energy drinks to give me the boost I needed to make it through the day. Up until this point, healthy eating and physical activity never crossed my mind, and I had no clue (because I was uneducated) that my body was behaving in the manner that it was because I was not caring for it appropriately. A pair of pants ripping while bending over to put on my shoes marked the beginning of my fitness journey toward a new me. Because I desired to look and feel better, I was compelled to find the answers about how to do just that.<br>
+BodyBuilding is comprised of many Categories but with my little experience i am based in the physique Category. My main aim of joining BodyBuilding was to live a healthy life and be different rom everyone else. Also to be conversant with different food diets and how they will be able tom make the body grow. <br>
+
+Through enganging in alot of weight lifting activities this helped me shape up my mind since with alot of exercise one is able to acquire sharp memory maintain younger looks. I also ran a page that is used to advice people who aspire Bodybuilding how to train in order to get the momentum for gaining Boddy Muscle.<br>
 
 
-But finding the right answers usually start with asking the right questions. In the beginning, I wanted to know how I could lose weight fast, so the only answers I cared to receive were of the quick results variety. I tried several of the popular weight loss fads that included juicing, colon cleanses, and various diets. I never asked if these methods were safe, effective long-term, or appropriate for my goals. I also did not ask if it was ok for me to continue eating foods that put the pounds on in the first place. You see, I wanted to experience a change without changing. I wanted these weight loss gimmicks to shed pounds off me without the need for me to give up the sweets I enjoyed or requiring that I engage in any physical activity. In other words, I wanted to remain complacent and stuck in who I was and take short-cuts and cheat the process. This was just the beginning of my journey and though I had a desire for change in my life, that desire was not yet strong enough because I continued to do the things that jeopardized any hope I had for weight loss.<br>
-
-
-The quick results tactics were not the answer and proved ineffective.</p>
-
-
+This sport however requires time inorder to see change in your body you must strive and work hard daily in the gym.</p>
 
 
 
 
 
 
-<p>you can put <a href="/githubkillfit/killian.html"> Your subscription to JOIN THE FITNESS LIFESYLE has been confirmed.For your records, here is a copy of the information you submitted to us.Email Address: Killianbrayan@gmail.com/>
+
+
+<p>you can put <a href="/github.com/alfredonyango/profile.html"> Your subscription to JOIN THE FITNESS LIFESYLE has been confirmed.For your records, here is a copy of the information you submitted to us.Email Address: alfredokoth27@gmail.com/>
 
 
 <br>First Name: ****** <br>
@@ -718,7 +717,7 @@ unsubscribe here<br>
 You may also contact us at:<br>
 
 
-Killianbrayan@gmail.com </a>
+alfredokoth27@gmail.com </a>
 
 
 
