--- a/profile.html
+++ b/profile.html
@@ -679,15 +679,16 @@ Copyright © ALFRED.COM
 <p>
 
 
-<h2></h2>ABOUT ME</h2>
-
+<head>
+  <title>ABOUT ME</title>
+</head>
 
 I used to play basketball but with the urge of my friends I decided to persure BodyBuilding.<br>
 
 
 BodyBuilding is comprised of many Categories but with my little experience i am based in the physique Category. My main aim of joining BodyBuilding was to live a healthy life and be different rom everyone else. Also to be conversant with different food diets and how they will be able tom make the body grow. <br>
 
-Through enganging in alot of weight lifting activities this helped me shape up my mind since with alot of exercise one is able to acquire sharp memory maintain younger looks. I also ran a page that is used to advice people who aspire Bodybuilding how to train in order to get the momentum for gaining Boddy Muscle.<br>
+Through enganging in alot of weight lifting activities this helped me shape up my mind since with alot of exercise one is able to acquire sharp memory maintain younger looks. I also ran a page that is used to advice people who aspire Bodybuilding how to train in order to get the momentum for gaining Body Muscle.<br>
 
 
 This sport however requires time inorder to see change in your body you must strive and work hard daily in the gym.</p>
@@ -699,7 +700,7 @@ This sport however requires time inorder to see change in your body you must str
 
 
 
-<p>you can put <a href="/github.com/alfredonyango/profile.html"> Your subscription to JOIN THE FITNESS LIFESYLE has been confirmed.For your records, here is a copy of the information you submitted to us.Email Address: alfredokoth27@gmail.com/>
+<p>you can put <a href="/github.com/alfredonyango/profile.html"> Your subscription to JOIN THE BODYBUILDING LIFESTYLE has been confirmed.For your records, here is a copy of the information you submitted to us.Email Address: alfredokoth27@gmail.com/>
 
 
 <br>First Name: ****** <br>
