--- a/profile.html
+++ b/profile.html
@@ -679,7 +679,7 @@ Copyright © ALFRED.COM
 <p>
 
 
-<title>ABOUT ME</title>
+<h2>ABOUT ME</h2>
 
 
 I used to play basketball but with the urge of my friends I decided to persure BodyBuilding.<br>
